# issue-20230427-cloudevents_json_string

java/: README.md  build.gradle.kts  output.yaml  settings.gradle.kts
java/src/main/java/io/github/aucampia/issue/cejsonstring/: App.java
java/src/test/java/io/github/aucampia/issue/cejsonstring/: AppTest.java  CloudEventsTest.java  JSONSerializationTests.java  SimpleTests.java
python/: .copier-answers.yml  .copier-answers.yml.conf  .editorconfig  README.md  pyproject.toml  setup.cfg
python/src/aucampia/issue/cejsonstring/: cli.py
python/tests/: test_simple.py
